<resources>
    <string name="app_name">Enqueue</string>
    <string name="email_sender">tech@roninaks.com</string>
    <string name="email_tech_support">tech@roninaks.com</string>
    <string name="email_admin">tech@roninaks.com</string>
    <string name="email_all">tech@roninaks.com</string>
    <string name="master_url">https://roninaks-test.000webhostapp.com/enqueue/</string>
    <string name="default_signin">default_login</string>
    <string name="method_post">POST</string>
    <string name="method_get">GET</string>
    <string name="google_signin">google_login</string>
    <string name="fb_signin">facebook_login</string>
    <string name="required_field">This field is required</string>
    <string name="invalid_cred">User or password is invalid</string>
    <string name="submit">Login</string>
    <string name="success">successful</string>
    <string name="failed">unsuccessful</string>
    <string name="unexpected">Something went wrong</string>
    <string name="service_status_active">Active</string>
    <string name="service_status_inactive">Inactive</string>
    <string name="service_status_break">Break</string>
    <string name="navigation_service">Service</string>
    <string name="navigation_queue">Queue</string>
    <string name="navigation_manage">Manage</string>
    <string name="login_activity_title">Login</string>
    <string name="confirm">Confirm</string>
    <string name="change_password_activity_title">Change Password</string>
    <string name="old_password_hint">Enter Old Password</string>
    <string name="new_password_hint">Enter New Password</string>
    <string name="confirm_password_hint">Enter New Password Again</string>
    <string name="passowrd_mismatch">The passwords don\'t match</string>
    <string name="incorrect_password">The password is incorrect</string>
    <string name="previous_password">Password cannot be same as previous password</string>
    <string name="password_change_successful">Password changed successfully</string>
    <string name="forgot_password_activity_title">Forgot Password</string>
    <string name="send_otp">Send OTP</string>
    <string name="resend_otp">Didn\'t receive OTP? Resend</string>


    <!-- Image Content Description -->
    <string name="main_background">Main Background Image</string>
    <string name="application_logo">Application Logo</string>
    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter password</string>
    <string name="back_navigation">Back Navigation</string>
    <string name="spinner_down_arrow">Spinner Arrow</string>
    <string name="add">Add</string>
    <string name="service_logo">Service Provider Logo</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="enter_search_cost">Enter Text</string>
    <string name="start_stop_service">Start or Stop Service</string>


    <string name="hello_blank_fragment">Welcome to Qmate</string>

    <!-- Service Individual Queue Fragment -->
    <string name="fsriq_waiting_count">Waiting</string>
    <string name="fsriq_waiting_time">Avg. Time</string>
    <string name="fsriq_served_count">Served</string>
    <string name="fsriq_button_delete_token">Delete Token</string>
    <string name="fsriq_button_not_present">Not Present</string>
    <string name="fsriq_button_next_token">Next Token</string>
    <string name="fsriq_take_break">Take a Break</string>
    <string name="fsriq_stop_service">Stop Service</string>

    <!-- Service Main Page -->
    <string name="service_title_text">QMate</string>
    <string name="service_footer">Powered by QMate</string>
    <string name="service_search_hint">Search Services</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_password">The password must contain atleast 6 digits, and an upper case</string>
    <string name="service_no_services">No results</string>
    <string name="services_more_options_start">Start Service</string>
    <string name="services_more_options_stop">Stop Service</string>
    <string name="services_more_options_delete">Delete Service</string>
    <string name="services_more_options_break">Take A Break</string>
    <string name="services_more_options_resume">Resume Service</string>
    <string name="services_more_options_deleteall">Delete All Services</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- Queue -->
    <string name="queue_status_pending">pending</string>
    <string name="queue_status_ongoing">ongoing</string>
    <string name="queue_status_cancelled">cancelled</string>
    <string name="queue_status_repeat_one">repeat1</string>
    <string name="queue_status_repeat_two">repeat2</string>
    <string name="queue_status_completed">completed</string>
    <string name="queue_estimated_time">Est. Time</string>
    <string name="queue_status_repeat_one_string">Second Call</string>
    <string name="queue_status_repeat_two_string">Third Call</string>
    <string name="fsriq_total">Total</string>
    <string name="service_status_info_subtitle">Tap on button</string>

    <!-- Create Tokens -->
    <string name="create_token_title_new">Create New Token</string>
    <string name="create_token_title_edit">Edit Token</string>
    <string name="create_token_et_name">Name</string>
    <string name="create_token">Create Token</string>
    <string name="edit_token">Edit Token</string>
    <string name="create_token_et_phone">Phone</string>
    <string name="queue_edit_item">Edit Queue</string>

    <!-- Forgot Password -->
    <string name="fp_stage_one">send_otp</string>
    <string name="fp_stage_two">confirm_otp</string>
    <string name="otp_hint">0</string>
    <string name="otp_title">An OTP has been sent to your email</string>
    <string name="back_to_login">Go back to login</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="empty_queue">No one is currently in queue</string>
    <string name="empty_service">Currently no services available</string>

    <!-- Notifications -->
    <string name="notification_trigered">Trigerred</string>
    <string name="notification_scheduled">Scheduled</string>
    <string name="notification_persistent">Persistent</string>
    <string name="notification_action">With Action</string>
    <string name="notification_expandable">Expandable</string>
    <string name="notification_id">Notification Id:</string>
    <string name="notification_name">Notification Type:</string>
</resources>
