<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ChangePasswordActivity"
        android:id="@+id/container">
        <!-- Background Image -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:translationZ="-1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_main_bg"
            android:contentDescription="@string/main_background"/>
        <!-- Center Area -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginBottom="@dimen/main_margin">
            <!-- Logo Image -->
            <ImageView
                android:layout_width="@dimen/services_logo_size"
                android:layout_height="@dimen/services_logo_size"
                android:src="@drawable/logo"
                android:layout_marginTop="@dimen/standard_gap_extra_large"
                android:layout_marginBottom="@dimen/standard_gap_extra_large"
                android:id="@+id/img_logo"
                android:contentDescription="@string/application_logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/super_title_size"
                android:textStyle="bold"
                android:text="@string/change_password_activity_title"
                android:textAllCaps="true"
                android:textColor="@color/colorTextBlackPrimary"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/standard_gap_large"/>
            <!-- Old Password -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_password_old"
                android:layout_marginStart="@dimen/main_margin"
                android:layout_marginEnd="@dimen/main_margin"
                android:layout_marginTop="@dimen/standard_gap"
                android:inputType="textPassword"
                android:hint="@string/old_password_hint"
                android:background="@drawable/login_edit_text"
                android:padding="@dimen/standard_gap"/>
            <!-- Password -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_password_new"
                android:layout_marginStart="@dimen/main_margin"
                android:layout_marginEnd="@dimen/main_margin"
                android:layout_marginTop="@dimen/standard_gap"
                android:inputType="textPassword"
                android:hint="@string/new_password_hint"
                android:background="@drawable/login_edit_text"
                android:padding="@dimen/standard_gap"/>
            <!-- Change Password -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_password_confirm"
                android:layout_marginStart="@dimen/main_margin"
                android:layout_marginEnd="@dimen/main_margin"
                android:layout_marginTop="@dimen/standard_gap"
                android:inputType="textPassword"
                android:hint="@string/confirm_password_hint"
                android:background="@drawable/login_edit_text"
                android:padding="@dimen/standard_gap"/>
            <!-- Submit Button -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_submit"
                android:text="@string/confirm"
                android:padding="@dimen/standard_gap_small"
                android:textAllCaps="true"
                android:textColor="@color/colorTextWhitePrimary"
                android:background="@drawable/button_background_filled_primary"
                android:layout_marginBottom="@dimen/standard_gap_extra_large"
                android:layout_marginTop="@dimen/standard_gap_large"/>
        </LinearLayout>
        <!-- Footer -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/service_footer"
            android:textSize="@dimen/subtitle_size"
            android:background="@color/colorPrimary"
            android:translationZ="5dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorTextWhitePrimary"
            android:textStyle="bold"
            android:paddingTop="@dimen/standard_gap_small"
            android:paddingBottom="@dimen/standard_gap_small"
            android:id="@+id/tv_footer"/>
    </RelativeLayout>
</layout>