<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.roninaks.enqueue.models.UserModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ServicesActivity"
        android:id="@+id/ll_container_master">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:translationZ="-1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_main_bg"
            android:contentDescription="@string/main_background"/>
        <!-- Logo Image -->
        <ImageView
            android:layout_width="@dimen/services_logo_size"
            android:layout_height="@dimen/services_logo_size"
            android:src="@drawable/logo"
            android:layout_marginTop="@dimen/standard_gap_large"
            android:layout_marginBottom="@dimen/standard_gap_small"
            android:id="@+id/img_logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/service_logo"/>
        <!-- Title Text -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{user.name}"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/standard_gap"
            android:layout_marginBottom="@dimen/standard_gap_small"
            android:textSize="@dimen/title_size"
            android:layout_below="@id/img_logo"
            android:id="@+id/tv_title"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorTextBlackPrimary"/>
        <!-- Search and Options Area -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll_container_search"
            android:layout_below="@id/tv_title"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_margin"
            android:layout_marginTop="@dimen/standard_gap"
            android:layout_marginBottom="@dimen/standard_gap_medium"
            android:baselineAligned="false">
            <SearchView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textDirection="ltr"
                android:queryHint="@string/service_search_hint"
                android:layout_weight="1"
                android:background="@drawable/search_view_drawable"
                android:id="@+id/sv_search"
                android:elevation="@dimen/standard_gap_large"
                android:clipToPadding="false"/>
            <LinearLayout
                android:layout_width="@dimen/round_button_size"
                android:layout_height="@dimen/round_button_size"
                android:background="@drawable/rounded_rectangle_orange_bg"
                android:gravity="center"
                android:id="@+id/ll_container_more"
                android:layout_marginStart="@dimen/standard_gap">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/more_icon_size"
                    android:src="@drawable/ic_more"
                    android:id="@+id/img_more"
                    android:contentDescription="@string/more"/>
            </LinearLayout>
        </LinearLayout>
        <!-- Services List -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_container_services"
            android:layout_below="@+id/ll_container_search">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_services" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_size"
                android:text="@string/service_no_services"
                android:textColor="@color/colorTextBlackPrimary"
                android:textAlignment="center"
                android:visibility="gone"
                android:id="@+id/tv_search_no_results"/>
        </LinearLayout>
        <!-- Footer -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/service_footer"
            android:textSize="@dimen/subtitle_size"
            android:background="@color/colorPrimary"
            android:translationZ="5dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorTextWhitePrimary"
            android:textStyle="bold"
            android:paddingTop="@dimen/standard_gap_small"
            android:paddingBottom="@dimen/standard_gap_small"
            android:id="@+id/tv_footer"/>
    </RelativeLayout>
</layout>
