<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="stage"
            type="String" />
        <import type="android.view.View"/>
    </data>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ForgotPasswordActivity"
        android:id="@+id/container">
        <!-- Background Image -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:translationZ="-1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_main_bg"
            android:contentDescription="@string/main_background"/>
        <!-- Center Area -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginBottom="@dimen/main_margin">
            <!-- Logo Image -->
            <ImageView
                android:layout_width="@dimen/services_logo_size"
                android:layout_height="@dimen/services_logo_size"
                android:src="@drawable/logo"
                android:layout_marginTop="@dimen/standard_gap_extra_large"
                android:layout_marginBottom="@dimen/standard_gap_extra_large"
                android:id="@+id/img_logo"
                android:contentDescription="@string/application_logo"/>
            <!-- Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/super_title_size"
                android:textStyle="bold"
                android:text="@string/forgot_password_activity_title"
                android:textAllCaps="true"
                android:textColor="@color/colorTextBlackPrimary"
                android:textAlignment="center"/>
            <!-- Email -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_username"
                android:layout_marginStart="@dimen/main_margin"
                android:layout_marginEnd="@dimen/main_margin"
                android:layout_marginBottom="@dimen/standard_gap"
                android:layout_marginTop="@dimen/standard_gap_extra_large"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:background="@drawable/login_edit_text"
                android:padding="@dimen/standard_gap"
                android:visibility="@{stage.equals(@string/fp_stage_one) ? View.VISIBLE : View.GONE}"/>
            <!-- OTP Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_otp_title"
                android:text="@string/otp_title"
                android:textAlignment="center"
                android:textColor="@color/colorTextBlackSecondary"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/standard_gap_large"
                android:visibility="@{stage.equals(@string/fp_stage_two) ? View.VISIBLE : View.GONE}"/>
            <!-- OTP Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/main_margin"
                android:layout_marginEnd="@dimen/main_margin"
                android:layout_marginBottom="@dimen/standard_gap"
                android:layout_marginTop="@dimen/standard_gap_extra_large"
                android:weightSum="4"
                android:id="@+id/ll_container_otp"
                android:visibility="@{stage.equals(@string/fp_stage_two) ? View.VISIBLE : View.GONE}">
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/standard_gap"
                    android:background="@drawable/login_edit_text"
                    android:hint="@string/otp_hint"
                    android:textAlignment="center"
                    android:id="@+id/et_otp_one"
                    android:layout_marginEnd="@dimen/standard_gap_small"
                    android:nextFocusForward="@id/et_otp_two"
                    android:inputType="number"
                    android:maxLength="1"
                    android:imeOptions="actionNext"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/standard_gap"
                    android:background="@drawable/login_edit_text"
                    android:hint="@string/otp_hint"
                    android:textAlignment="center"
                    android:id="@+id/et_otp_two"
                    android:layout_marginEnd="@dimen/standard_gap_small"
                    android:layout_marginStart="@dimen/standard_gap_small"
                    android:nextFocusForward="@id/et_otp_three"
                    android:inputType="number"
                    android:maxLength="1"
                    android:imeOptions="actionNext"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/standard_gap"
                    android:background="@drawable/login_edit_text"
                    android:hint="@string/otp_hint"
                    android:textAlignment="center"
                    android:id="@+id/et_otp_three"
                    android:layout_marginEnd="@dimen/standard_gap_small"
                    android:layout_marginStart="@dimen/standard_gap_small"
                    android:nextFocusForward="@id/et_otp_four"
                    android:inputType="number"
                    android:maxLength="1"
                    android:imeOptions="actionNext"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/standard_gap"
                    android:background="@drawable/login_edit_text"
                    android:hint="@string/otp_hint"
                    android:textAlignment="center"
                    android:id="@+id/et_otp_four"
                    android:layout_marginStart="@dimen/standard_gap_small"
                    android:inputType="number"
                    android:maxLength="1" />
            </LinearLayout>
            <!-- Resend OTP -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_resend_otp"
                android:text="@string/resend_otp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/standard_gap_large"
                android:visibility="@{stage.equals(@string/fp_stage_two) ? View.VISIBLE : View.GONE}"/>
            <!-- Submit Button -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_submit"
                android:text="@{stage.equals(@string/fp_stage_one) ? @string/send_otp : @string/confirm}"
                android:padding="@dimen/standard_gap_small"
                android:textAllCaps="true"
                android:textColor="@color/colorTextWhitePrimary"
                android:background="@drawable/button_background_filled_primary"
                android:layout_marginTop="@dimen/standard_gap_large"/>
            <!-- Back to login -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_back_to_login"
                android:text="@string/back_to_login"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/standard_gap_large"
                android:visibility="@{stage.equals(@string/fp_stage_two) ? View.VISIBLE : View.GONE}"
                android:layout_marginBottom="@dimen/standard_gap_extra_large"/>
        </LinearLayout>
        <!-- Footer -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/service_footer"
            android:textSize="@dimen/subtitle_size"
            android:background="@color/colorPrimary"
            android:translationZ="5dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorTextWhitePrimary"
            android:textStyle="bold"
            android:paddingTop="@dimen/standard_gap_small"
            android:paddingBottom="@dimen/standard_gap_small"
            android:id="@+id/tv_footer"/>
    </RelativeLayout>
</layout>